| Bug #18550 | ndbd getting "node failure handling not complete..." after graceful restart | ||
|---|---|---|---|
| Submitted: | 27 Mar 2006 20:24 | Modified: | 28 Apr 2006 10:57 |
| Reporter: | Serge Kozlov | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.0 -> | OS: | Linux (FC4) |
| Assigned to: | Tomas Ulin | Target Version: | |
[27 Mar 2006 20:24]
Serge Kozlov
[28 Mar 2006 17:31]
Serge Kozlov
Appearing of bug is unstable.
[28 Mar 2006 18:15]
Jonas Oreland
The behavior that node restart should fail if node failure handling is not complete is expected. It should however not produce core, this is duplicate of http://bugs.mysql.com/bug.php?id=17677. BTW: If you did "graceful restart" i.e using ndb_mgm, then it should be fixed to wait with restart until a node is allowed to start.
[28 Mar 2006 18:16]
Jonas Oreland
Did you do "graceful restart" ?
[28 Mar 2006 18:49]
Serge Kozlov
I did 'graceful restart' - 'X RESTART'
[27 Apr 2006 7:31]
Tomas Ulin
reviewed by Jonas pushed to 5.0.22 and 5.1.10
[28 Apr 2006 10:57]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.0.22/5.1.10 changelogs; closed.
